# FnQVisual-rs

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  fnq-visual.install  fnq-visual.service  temp.txt
src/: config.rs  main.rs  monitor.rs  ui.rs  window.rs
