[package]
name = "fnq-visual"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_10"] }
gtk4-layer-shell = { version = "0.3", package = "gtk4-layer-shell-v1" }
gdk4 = "0.8"
gdk4-pixbuf = "0.18"
gio = "0.18"
glib = "0.18"
tokio = { version = "1.38", features = ["full"] }
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"